Fix Two-Factor form on mobile (#593)
* Make textboxes use keypad input on mobile

* Fix input boxes on mobile

--- a/ProjectLighthouse/StaticFiles/css/styles.css
+++ b/ProjectLighthouse/StaticFiles/css/styles.css
@@ -150,7 +150,8 @@ div.cardStatsUnderTitle > span {
     height: 3rem;
     text-align: center;
     border: 1px solid #d4d4d5;
-    border-radius: 5px
+    border-radius: 5px;
+    padding: 0
 }
 
 .middleDigit {
